# rest_sketch

./: README.md  pyproject.toml
src/rest_sketch/request/: headers_base.py  params_base.py  raw_request.py  request_base.py
src/rest_sketch/request_extended/: formatters.py  request_extended.py
tests/: simple_http_server.py  test_build_request.py
